docs/assets/css/style.css
/* Reset default browser styles */
body, h1, h2, h3, p, ul, li, form, input, textarea, button {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Gill Sans, sans-serif;
    line-height: 32px;
    &:not(:last-child)  {
        margin-bottom: 30px;
    }
  }

  
  /* Set up page structure */
  header {
    background-color: #333;
    padding: 20px;
  }

  footer {
    background-color: #f2f2f2;
    padding: 20px;
  }
  
  nav ul {
    list-style: none;
  }
  
  nav ul li {
    display: inline-block;
    margin-right: 10px;
  }
  
  nav ul li a {
    color: #fff;
    text-decoration: none;
  }
  
  .hero {
    background-image: url('assets/images/background.jpg');
    background-size: cover;
    background-position: center;
    height: 500px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    color: #ffffff;
  }
  
  .content {
    max-width: 800px;
    margin: 0 auto;
    padding: 40px;
  }

  .post-list {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 20px;
    margin: 20px;
  }

  .post-button {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 300px;
    height: 300px;
    background-color: #f9f9f9;
    border: none;
    border-radius: 8px;
    text-decoration: none;
    color: #333;
    transition: all 0.3s ease;
    overflow: hidden;
  }

  .post-button:hover {
    transform: translateY(-5px);
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
  }

  .post-image {
    width: 100%;
    height: 300px;
    background-size: cover;
    background-position: center;
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
  }

  .post-content {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 20px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    opacity: 0;
    transition: opacity 0.3s ease;
    background-color: rgba(255, 255, 255, 0.9);
    pointer-events: none;
  }

  .post-button:hover .post-content {
    opacity: 1;
    pointer-events: auto;
  }

  .post-title {
    margin-top: 10px;
    font-size: 18px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    max-width: 100%;
    text-align: center;
  }

  /* .post-button:hover .post-title {
    white-space: normal;
    overflow: initial;
    text-overflow: initial;
  } */

  .post-description {
    margin-top: 5px;
    font-size: 14px;
    text-align: center;
  }
  
  section h2 {
    margin-bottom: 20px;
  }
  
  section p {
    line-height: 1.6;
  }
  
  form input,
  form textarea {
    width: 100%;
    margin-bottom: 10px;
    padding: 10px;
  }
  
  form button {
    padding: 10px 20px;
    background-color: #333;
    color: #fff;
    border: none;
    cursor: pointer;
  }
  
  footer {
    background-color: #333;
    padding: 20px;
    text-align: center;
    color: #fff;
  }

